<resources>
    <string name="app_name">Moliviti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    NavigationDrawer-->
    <string name="home">Inicio</string>
    <string name="routes">Rutas</string>
    <string name="card_bus">Tu llave</string>
    <string name="favorites">Favoritos</string>
    <string name="about">Acerca de</string>
    <string name="settings">Configuracion</string>
    <string name="navdrawer_profile_name">Johanna</string>
    <string name="navdrawer_profile_email">example@email.com</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>

    <!--    ToolBar-->
    <string name="toolbar_title">Moliviti</string>

    <!--    checkCardBusFragment-->
    <string name="check_card_title">Tu Recarga</string>
    <string name="check_card_current_amount">Saldo Actual</string>
    <string name="check_card_charge">Recargar</string>

    <!--    rechargeCardBusFragment-->
    <string name="recharge_card_title">Valor Recarga:</string>
    <string name="recharge_card_name_recharger">Nombre:</string>
    <string name="recharge_card_id_recharger">Documento:</string>
    <string name="recharge_card_email_recharger">Correo:</string>
    <string name="recharge_card_charge">Recargar</string>
    <string name="recharge_card_hint_charge">Valor a recargar</string>
    <string name="recharge_card_hint_name">Ingresa tu nombre</string>
    <string name="recharge_card_hint_id">Ingresa tu documento</string>
    <string name="recharge_card_hint_email">Ingresa tu email</string>
    <string name="privacy_policy">Estoy de acuerdo con los terminos del servicio \n y la politica de privacidad.</string>
    <string name="check_values">Revisa los datos suministrados (sin campos vacios)</string>
    <string name="error_values">Hay un error en los datos suministrados…</string>
    <string name="good_values">La recarga fue realizada con exito!</string>
    <string name="wrong_values">El valor de la recarga debe estar entre $10.000 y $300.000</string>
</resources>