<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_bus"
        android:icon="@drawable/ic_baseline_directions_bus_24"
        android:title="@string/routes"/>

    <item
        android:id="@+id/nav_card"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="@string/card_bus"/>

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_baseline_chrome_reader_mode_24"
        android:title="@string/about"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>