<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.RechargeCardBusFragment">

        <TextView
            android:id="@+id/chargeCard_title"
            style="@style/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/recharge_card_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/charge_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/recharge_card_hint_charge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chargeCard_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/charge_value_input"
                style="@style/layout_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/name_title"
            style="@style/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recharge_card_name_recharger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/charge_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/recharge_card_hint_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_value_input"
                style="@style/layout_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_title"
            style="@style/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recharge_card_id_recharger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_input"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/recharge_card_hint_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_value_input"
                style="@style/layout_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_title"
            style="@style/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/recharge_card_email_recharger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/recharge_card_hint_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_value_input"
                style="@style/layout_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/privacy_checkbox"
            style="@style/layout_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <Button
            android:id="@+id/rechargeCard_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recharge_card_charge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/privacy_checkbox" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>